[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/arena/arena.gd" id="1"]

[node name="Arena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.05, 0.03, 0.04, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
text = "Online Arena"

[node name="Spacer" type="Control" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = ""

[node name="OnlineControls" type="HBoxContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 4

[node name="RegNameInput" type="LineEdit" parent="Margin/VBox/OnlineControls"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
placeholder_text = "Display name"
max_length = 20

[node name="RegisterBtn" type="Button" parent="Margin/VBox/OnlineControls"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 24)
text = "Join Arena"

[node name="UploadBtn" type="Button" parent="Margin/VBox/OnlineControls"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 24)
text = "Upload Build"
visible = false

[node name="OpponentScroll" type="ScrollContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)

[node name="OpponentContainer" type="VBoxContainer" parent="Margin/VBox/OpponentScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="FollowerContainer" type="VBoxContainer" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="BtnRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 6

[node name="FightBtn" type="Button" parent="Margin/VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 24)
text = "FIGHT!"

[node name="BackBtn" type="Button" parent="Margin/VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 24)
text = "Back"
